[tool.poetry]
name = "dhcp"
version = "1.0.0"
description = "DHCP Server"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
netifaces = "^0.11.0"
pynautobot = "^2.2.1"
pynetbox = "^7.4.0"
scapy = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dhcpd = "dhcp:run"
